--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # .env for frontend
-VITE_API_URL=http://localhost:4000/api
+VITE_API_URL=http://localhost:4000
 VITE_FIREBASE_API_KEY=AIzaSyCDMRE78kLF9p3dfBJ8NVbBEAWpMHIy4Tk
 VITE_FIREBASE_AUTH_DOMAIN=interwitch.firebaseapp.com
 VITE_FIREBASE_PROJECT_ID=interwitch
