Remove service account key from repo and add to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ dist-ssr
 *.sln
 *.sw?
 backend/interwitch-firebase-adminsdk-fbsvc-9b858a540b.json
+backend/interwitch-firebase-adminsdk-fbsvc-9b858a540b.json
