--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 # .env.example for backend
-DATABASE_URL=postgresql://<username>:<password>@<host>:<port>/<db>
-GOOGLE_APPLICATION_CREDENTIALS=interwitch-firebase-adminsdk-fbsvc-9b858a540b.json
+DATABASE_URL=postgresql://interview_results_user:ZuAtNAF8RmFHQB3Mody16y3tZBsQlj7W@dpg-d3f6blripnbc73a01k7g-a.singapore-postgres.render.com/interview_results
+GOOGLE_APPLICATION_CREDENTIALS=interwitch-firebase-adminsdk-fbsvc-3d5cd9dcce.json
 PORT=4000
 GEMINI_API_KEY=AIzaSyDo64RWiOC4zNBd0IozR4Y61eTnV4B4AuQ
